# wf-dump-scripts

./: README.md  calculate-z8-stats.py  config.py  convert-dump-to-json.py  dump-download.py  pyproject.toml  run-pipeline.py
models/: client.py  dump_converter.py  dump_downloader.py  exceptions.py  z8_calculator.py  zid_item.py
models/statistics/: test_status.py  test_status_manager.py  z8_calculator.py  zmap.py  zwikiwriter.py
models/wf/: client.py  enums.py  zentity.py  zfunction.py  zimpl.py  ztester.py
test_data/api/v2/: wikilambda_perform_test.json
test_data/dump/: zfunction.json  zimplementation.json  ztester.json
tests/: test_client.py  test_zentity.py  test_zfunction.py  test_zid_item.py  test_zimpl.py  test_ztester.py
