[project]
name = "wf-dump-scripts"
version = "0.1.0"
description = ""
authors = [
    {name = "Nizo Priskorn",email = "68460690+dpriskorn@users.noreply.github.com"}
]
license = {text = "GPLv3+"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic (>=2.12.5,<3.0.0)",
    "tenacity (>=9.1.2,<10.0.0)",
    "flatten-json (>=0.1.14,<0.2.0)"
]
package-mode = "false"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "black (>=25.12.0,<26.0.0)",
    "deadcode (>=2.4.1,<3.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)"
]

[tool.deadcode]
# ignore specific names so they won’t be reported as unused
ignore-names = [
  "arbitrary_types_allowed",
    "extra",
    "setUp",
    "Config"
]

# other useful ignores
ignore-names-if-inherits-from = []
ignore-names-if-decorated-with = []
ignore-names-in-files = []